[gd_scene load_steps=8 format=3 uid="uid://dqo0840f7a5y8"]

[ext_resource type="Script" uid="uid://duw2akmp8hlea" path="res://scripts/inv_ui.gd" id="1_lhqxo"]
[ext_resource type="Texture2D" uid="uid://brs13visvadh0" path="res://assets/inventory/inventory.png" id="2_nugt8"]
[ext_resource type="PackedScene" uid="uid://du8hsqh3cn61v" path="res://assets/inventory/inv_ui_slot.tscn" id="3_f2swp"]
[ext_resource type="FontFile" uid="uid://peup0qkkjxsi" path="res://assets/Fonts/PixelOperator8.ttf" id="4_gn6f3"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_gn6f3"]
light_mode = 1

[sub_resource type="Gradient" id="Gradient_f2swp"]
offsets = PackedFloat32Array(0.961039, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gn6f3"]
gradient = SubResource("Gradient_f2swp")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Inv_UI" type="Control"]
process_mode = 3
z_index = 30
material = SubResource("CanvasItemMaterial_gn6f3")
custom_minimum_size = Vector2(172, 120)
layout_mode = 3
anchors_preset = 0
offset_right = 172.0
offset_bottom = 120.0
script = ExtResource("1_lhqxo")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 172.0
offset_bottom = 154.0
texture = ExtResource("2_nugt8")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="GridContainer" type="GridContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.05
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_right = 70.0
offset_bottom = 104.0
grow_horizontal = 2
columns = 4

[node name="inv_UI_slot" parent="NinePatchRect/GridContainer" instance=ExtResource("3_f2swp")]
layout_mode = 2

[node name="inv_UI_slot2" parent="NinePatchRect/GridContainer" instance=ExtResource("3_f2swp")]
layout_mode = 2

[node name="inv_UI_slot3" parent="NinePatchRect/GridContainer" instance=ExtResource("3_f2swp")]
layout_mode = 2

[node name="inv_UI_slot4" parent="NinePatchRect/GridContainer" instance=ExtResource("3_f2swp")]
layout_mode = 2

[node name="inv_UI_slot5" parent="NinePatchRect/GridContainer" instance=ExtResource("3_f2swp")]
layout_mode = 2

[node name="inv_UI_slot6" parent="NinePatchRect/GridContainer" instance=ExtResource("3_f2swp")]
layout_mode = 2

[node name="inv_UI_slot7" parent="NinePatchRect/GridContainer" instance=ExtResource("3_f2swp")]
layout_mode = 2

[node name="inv_UI_slot8" parent="NinePatchRect/GridContainer" instance=ExtResource("3_f2swp")]
layout_mode = 2

[node name="inv_UI_slot9" parent="NinePatchRect/GridContainer" instance=ExtResource("3_f2swp")]
layout_mode = 2

[node name="inv_UI_slot10" parent="NinePatchRect/GridContainer" instance=ExtResource("3_f2swp")]
layout_mode = 2

[node name="inv_UI_slot11" parent="NinePatchRect/GridContainer" instance=ExtResource("3_f2swp")]
layout_mode = 2

[node name="inv_UI_slot12" parent="NinePatchRect/GridContainer" instance=ExtResource("3_f2swp")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
clip_contents = true
layout_mode = 0
offset_top = 114.0
offset_right = 172.0
offset_bottom = 153.0

[node name="ItemName" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_gn6f3")
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="ItemDescription" type="RichTextLabel" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(170, 16)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("4_gn6f3")
theme_override_font_sizes/normal_font_size = 8
scroll_active = false
autowrap_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ArrowIndicator" type="Label" parent="NinePatchRect/VBoxContainer/ItemDescription"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = -10.0
offset_right = 3.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_gn6f3")
theme_override_font_sizes/font_size = 8
text = "â–¶ "
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 3

[node name="Prev" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_top = 96.0
offset_right = 16.0
offset_bottom = 112.0
theme_override_fonts/font = ExtResource("4_gn6f3")
theme_override_font_sizes/font_size = 8
text = "<"
flat = true

[node name="Next" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_left = 156.0
offset_top = 96.0
offset_right = 172.0
offset_bottom = 112.0
theme_override_fonts/font = ExtResource("4_gn6f3")
theme_override_font_sizes/font_size = 8
text = ">"
flat = true

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(86, 77)
scale = Vector2(2.6875, 2.40625)
shadow_filter = 2
texture = SubResource("GradientTexture2D_gn6f3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[connection signal="pressed" from="NinePatchRect/Prev" to="." method="prev_page"]
[connection signal="pressed" from="NinePatchRect/Next" to="." method="next_page"]
